--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
 </head>
 <body class="bg-dark">
-    <script src="js/palidroma.js"></script>
+<!--     <script src="js/palidroma.js"></script> -->
+    <script src="js/pari&dispari.js"></script>
 </body>
 </html>
